[gd_scene load_steps=7 format=3 uid="uid://bcusklg12mcbs"]

[ext_resource type="Script" uid="uid://01miou1shro5" path="res://player.gd" id="1_onrkg"]
[ext_resource type="SpriteFrames" uid="uid://d13sxd6noswb4" path="res://character assets CUSTOMIZE/free_character_nude_frames.tres" id="2_sweqy"]
[ext_resource type="SpriteFrames" uid="uid://b4a34pifwvgug" path="res://character assets CUSTOMIZE/outfit/male_outfit_original_frames.tres" id="3_2hs0m"]
[ext_resource type="SpriteFrames" uid="uid://ciu0o1qbw83vw" path="res://character assets CUSTOMIZE/hair/male_hair_orange_frames.tres" id="4_1jxqw"]
[ext_resource type="SpriteFrames" uid="uid://b2bxwo26rf6hr" path="res://character assets CUSTOMIZE/eyes/male_eyes_yellow_frames.tres" id="5_dw050"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_onrkg"]
size = Vector2(60, 72)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_onrkg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, 4)
shape = SubResource("RectangleShape2D_onrkg")

[node name="BodySprite" type="AnimatedSprite2D" parent="."]
z_index = 1
scale = Vector2(4, 4)
sprite_frames = ExtResource("2_sweqy")
animation = &"idle_down"

[node name="OutfitSprite" type="AnimatedSprite2D" parent="."]
z_index = 2
scale = Vector2(4, 4)
sprite_frames = ExtResource("3_2hs0m")
animation = &"idle_down"

[node name="HairSprite" type="AnimatedSprite2D" parent="."]
z_index = 3
scale = Vector2(4, 4)
sprite_frames = ExtResource("4_1jxqw")
animation = &"idle_down"

[node name="EyesSprite" type="AnimatedSprite2D" parent="."]
z_index = 4
scale = Vector2(4, 4)
sprite_frames = ExtResource("5_dw050")
animation = &"idle_down"
